changed OSB location
it's equidistant between us and the talk

--- a/schedule.html
+++ b/schedule.html
@@ -285,7 +285,7 @@
                         <td>20:00</td>
                         <td rowspan="12" class="text-center sEvent" data-id="osbee" data-toggle="modal" data-target="#infoModal">
                             <br><br><br><br><br><br>OSBee
-                            <br>(3 Brewers)
+                            <br>(Duke's Refresher)
                         </td>
                     </tr>
                     <tr>
