--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 		<div><img class="logo" src="./images/chip_retro_2.svg" alt="retro-brain-logo"></div>
 
-		<div id="reg-link"><a href="https://github.com/brainhackto/global-ON-2020" id="register-link">This event is over - but click here to go to BrainHack 2020!</a></div>
+		<div id="reg-link"><a href="https://brainhackto.github.io/global-ON-2020/" id="register-link">This event is over - but click here to go to BrainHack 2020!</a></div>
 	  </div>
 	
 
